--- a/CareNow/src/app/components/patient-records/patient-records.component.css
+++ b/CareNow/src/app/components/patient-records/patient-records.component.css
@@ -242,7 +242,7 @@
         border: none;
         padding: 10px 20px;
         font-size: 17px;
-        font-family: Raleway;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         cursor: pointer;
       }
       
