--- a/CareNow/src/app/app.component.css
+++ b/CareNow/src/app/app.component.css
@@ -14,6 +14,15 @@
     height:100%;
   background-image: url("../assets/img/bg4.jpg");
   }
+  .backgroundDoc {
+    position:absolute;
+    left:0;
+    top:0;
+    width:100%;
+    height:100%;
+    background-image: url("../assets/img/bgdoc2.jpg");
+  }
+  
   .header {
     position:absolute;
     left:0;
