--- a/CareNow/src/app/components/add-pr/add-pr.component.html
+++ b/CareNow/src/app/components/add-pr/add-pr.component.html
@@ -3,7 +3,7 @@
     <div class="container">
 
         
-        <h1 class="display-3">Patient Record.</h1>    
+        <h1 class="display-3">Patient Record</h1>    
         <br>   
         <div class="form-group ">
         <form (ngSubmit)= "savePR()">
