--- a/CareNow/src/app/components/doctor-home/doctor-home.component.html
+++ b/CareNow/src/app/components/doctor-home/doctor-home.component.html
@@ -5,22 +5,10 @@
        <div class="container center-block ">
         <div id="Docinfo">
            <h1 class="display-1">CareNow!</h1>
-           <p class="lead">Welcome Dr. Roshine Poddalgoda.</p>
+           <p class="lead">Welcome {{service.sessionUser_NAME}}</p>
            <hr>
         </div>
     </div>
    </div>
     
     <!-- <div class="mainContent" style="background-color :#ffffff; height:5%; width:90%;box-shadow:none;padding:0;"></div>  -->
-    
-    
-  
-<script type="text/javascript">
-  function openTimeLine() {
-    document.getElementById("notificationPanel").style.width = "340px";
-  }
-
-  function closeTimeLine() {
-    document.getElementById("notificationPanel").style.width = "0";
-  }
-</script>
