--- a/CareNow/src/app/components/list-pr/list-pr.component.html
+++ b/CareNow/src/app/components/list-pr/list-pr.component.html
@@ -1,7 +1,7 @@
-<div class="bg-dark">
-  <div id= font-selection>
+<div class="mainContent">
+ 
   <br> <br> 
-  <div class="textpaddleft text-light">  
+  <div class="textpaddleft text-dark">  
     <h1 class="display-3">Patient Record.</h1>    
     <br>    
 
@@ -28,7 +28,7 @@
 
 <br>
 <div style="overflow:auto;" class="table-responsive">
-    <table  class="table table-dark table-hover">
+    <table  class="table table-hover">
       <thead>
         <tr>
           <th>Patient Record ID</th>
@@ -62,7 +62,7 @@
 <br> 
 </table> 
 </div>
-</div>
+
 
 
 </div>
