LIst Patient Record Working Commit

--- a/CareNow/src/app/components/list-pr/list-pr.component.html
+++ b/CareNow/src/app/components/list-pr/list-pr.component.html
@@ -55,8 +55,8 @@
           <td style="width:14%;">{{PR.patientrecordplan}}</td>
           <td style="width:14%;">{{PR.patientrecordessential}}</td>
           <td style="width:10%;">{{PR.patientrecordextra}}</td>
-          <td><a class=" btn btn-outline-success" routerLink="/editPR/{{PR.patientRecordID}}" >Edit</a></td>
-          <td><button class="btn btn-outline-danger" (click) ="deletePR(PR.patientRecordID)" >Delete</button></td>
+          <td><a class=" btn btn-success" routerLink="/editPR/{{PR.patientRecordID}}" >Edit</a></td>
+          <td><button class="btn btn-danger" (click) ="deletePR(PR.patientRecordID)" >Delete</button></td>
       </tr> 
 </tbody> 
 <br> 
