--- a/CareNow/src/app/components/add-pr/add-pr.component.css
+++ b/CareNow/src/app/components/add-pr/add-pr.component.css
@@ -12,7 +12,8 @@
     box-shadow:0 4px 8px 0 rgba(0,0,0,1);
     overflow: auto;
     padding:3% 2%;
-     
+    font-family: "Segoe UI";
+
   }
 #back {
 	margin: 0;
@@ -25,3 +26,14 @@
     font-family: "Segoe UI";
 }
 
+input.ng-invalid{
+  border-left: 5px solid red;
+}
+
+input.ng-valid{
+  border-left: 5px solid green;
+}
+
+.error{
+  color: red;
+}
