--- a/CareNow/src/app/components/list-pr/list-pr.component.css
+++ b/CareNow/src/app/components/list-pr/list-pr.component.css
@@ -1,4 +1,4 @@
-
+@import "~bootstrap/dist/css/bootstrap.css";  
 #padd{
     padding-top: 5%;
   
@@ -8,3 +8,19 @@
     font-family: "Segoe UI";  
 }
 
+
+
+.mainContent {
+    position:absolute;
+    top:13%;
+    left:8%;
+    background-color:white;
+    width:92%;
+    height:77%;
+    border-radius: 45px 0 0 0;
+    z-index:15;
+    box-shadow:0 4px 8px 0 rgba(0,0,0,1);
+    overflow: auto;
+    padding:3% 2%;
+    font-family: "Segoe UI";
+}
