Prescription Works 1 commit

--- a/CareNow/src/app/app.component.html
+++ b/CareNow/src/app/app.component.html
@@ -120,7 +120,7 @@
     <div class="naviIcon" title="Appointments' Today" routerLink="appointments">
       <img src="assets/img/apoIcon.png" alt="Appointment Icon" width="100%">
     </div>
-    <div class="naviIcon" title="Calendar" routerLink="/patientHome">
+    <div class="naviIcon" title="Calendar" routerLink="/testing">
       <img src="assets/img/calanderIcon.png" alt="Calendar Icon" width="100%">
     </div>
     <div class="naviIcon" title="CareNow Memo" routerLink="create_memo">
@@ -134,6 +134,9 @@
       <img src="assets/img/memoIcon.png" alt="CareNow Memo Icon" width="100%">
     </div>
   </div>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
+  <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js" type="text/javascript"></script>
 
   <router-outlet></router-outlet>
 
