--- a/CareNow/src/app/components/print-view-prescription/print-view-prescription.component.html
+++ b/CareNow/src/app/components/print-view-prescription/print-view-prescription.component.html
@@ -1,4 +1,5 @@
-<div>
+<div class="mainContent">
+
 <div class="container" id="elemet-to export">
 <div class="row">
 <div class="col">
@@ -50,7 +51,6 @@
         <button type="button" class="btn btn-lg btn-primary" (click)="pdfnow()">Download PDF</button>
     </div>
 </div>
-
 
 
 </div>
