--- a/CareNow/src/app/components/mp/mp.component.html
+++ b/CareNow/src/app/components/mp/mp.component.html
@@ -11,38 +11,57 @@
       <div class="col-6">
         <div class="form-group">
     
-      <form (ngSubmit)= "savePres()" >
-        <div class="form-row">
-          <div class="col">
-     
-          <h4>Patient ID</h4>
-         <input type="number" class="form-control form-control-lg" placeholder="Patient ID" [(ngModel)]="pres_.prespatientid" name="prespatientid">
-<br></div><div class="col">
-         <h4>Date</h4>
-         <input type="date" class="form-control form-control-lg" placeholder="Date" [(ngModel)]="pres_.presdate" name="presdate" id="today">
-<br></div></div>
-<h4>Patient Name</h4>
-         <input type="text" class="form-control form-control-lg" placeholder="Patient Name" [(ngModel)]="pres_.prespatientName" name="prespatientName">
-<br>
+    <form (ngSubmit)= "savePres()" >
+      <div class="form-row">
+        
+      <div class="col">
+      <h4>Patient ID</h4>
+      <input type="number" class="form-control form-control-lg" placeholder="Patient ID" [(ngModel)]="pres_.patient_id" name="patient_id">
+      <br>
+      </div>
+      
+      <div class="col">
+      <h4>Date</h4>
+      <input type="date" class="form-control form-control-lg" placeholder="Date" [(ngModel)]="pres_.prescription_date" name="prescription_date">
+      <br>
+      </div>
 
-<div class="form-row">
-  <div class="col">
-    <h4>Age</h4>
-         <input type="number" class="form-control form-control-lg" placeholder="Age" [(ngModel)]="pres_.prespatientAge" name="prespatientAge">
-<br> </div><div class="col">
-  <h4>Doctor Fee | Rs.</h4>
-         <input type="number" class="form-control form-control-lg" placeholder="Doctor Fee (Rs.)" [(ngModel)]="pres_.docfee" name="docfee">
-<br></div></div><br>   
+      </div>
 
+      <h4>Patient Name</h4>
+      <input type="text" class="form-control form-control-lg" placeholder="Patient Name" [(ngModel)]="pres_.patient_name" name="patient_name">
+      <br>
 
-         <textarea hidden class="form-control" rows="6" disabled  placeholder="Drugs Added " [(ngModel)]="pres_.presdrugs" name="presdrugs"></textarea>
-<br>
-    <div class="vertical-center2"> 
-      <button type="submit" class="btn btn-primary btn-lg " >Submit Prescription</button>
+      <div class="form-row">
+      <div class="col">
+
+      <h4>Age</h4>
+      <input type="number" class="form-control form-control-lg" placeholder="Age" [(ngModel)]="pres_.patient_age" name="patient_age">
+      <br></div>
+      
+      <div class="col">
+      <h4>Doctor Fee | Rs.</h4>
+      <input type="number" class="form-control form-control-lg" placeholder="Doctor Fee (Rs.)" [(ngModel)]="pres_.docFee" name="docFee">
+      <br>
+      </div>
+
     </div>
-<br>
+    <br>   
+
+
+    <textarea hidden class="form-control" rows="6" disabled  placeholder="Drugs Added " [(ngModel)]="pres_.drugs" name="drugs"></textarea>
+    <textarea hidden class="form-control" rows="1" disabled  placeholder="doctor ID " [(ngModel)]="pres_.doctor_id" name="doctor_id"></textarea>
+    <textarea hidden class="form-control" rows="1" disabled  placeholder="status " [(ngModel)]="pres_.status" name="status"></textarea>
+    <br>
+
+    <div class="vertical-center2"> 
+    <button type="submit" class="btn btn-primary btn-lg " (click)= "savePres()">Submit Prescription</button>
+    </div>
+    <br>
+
     </form>
-  </div>
+  
+</div>
 </div>
 <div class="col-3"></div>
 </div>
