--- a/CareNow/src/app/components/print-view-prescription/print-view-prescription.component.css
+++ b/CareNow/src/app/components/print-view-prescription/print-view-prescription.component.css
@@ -1,4 +1,21 @@
+@import "~bootstrap/dist/css/bootstrap.css";  
 
+.mainContent {
+    position:absolute;
+    top:13%;
+    left:8%;
+    background-color:white;
+    width:92%;
+    height:77%;
+    border-radius: 45px 0 0 0;
+    z-index:15;
+    box-shadow:0 4px 8px 0 rgba(0,0,0,1);
+    overflow: auto;
+    padding:3% 2%;
+    font-family: "Segoe UI";
+
+     
+  }
 #boxx {
     border: 1px solid;
     padding: 10px;
