--- a/CareNow/src/app/components/mp/mp.component.html
+++ b/CareNow/src/app/components/mp/mp.component.html
@@ -11,39 +11,77 @@
       <div class="col-6">
         <div class="form-group">
     
-    <form (ngSubmit)= "savePres()" >
+    <form [formGroup] = "AddPresform" (ngSubmit)= "savePres()" >
       <div class="form-row">
         
       <div class="col">
+        <div class="form-group">
       <h4>Patient ID</h4>
-      <input type="number" class="form-control form-control-lg" placeholder="Patient ID" [(ngModel)]="pres_.patient_id" name="patient_id">
+      <input type="number" 
+      class="form-control form-control-lg" 
+      placeholder="Patient ID" 
+      [(ngModel)]="pres_.patient_id" 
+      name="patient_id"
+      formControlName = "patient_id">
+      <span class ="error"*ngIf ="patient_id.invalid && patient_id.touched">Patient ID Required</span>
       <br>
+      </div>
       </div>
       
+
       <div class="col">
+        <div class="form-group">
       <h4>Date</h4>
-      <input type="date" class="form-control form-control-lg" placeholder="Date" [(ngModel)]="pres_.prescription_date" name="prescription_date">
+      <input type="date" 
+      class="form-control form-control-lg" 
+      placeholder="Date" 
+      [(ngModel)]="pres_.prescription_date" 
+      name="prescription_date"
+      formControlName = "prescription_date">
+      <span class ="error"*ngIf ="prescription_date.invalid && prescription_date.touched">Date Required</span>
       <br>
-      </div>
+      </div></div>
+
 
       </div>
 
+      <div class="form-group">
       <h4>Patient Name</h4>
-      <input type="text" class="form-control form-control-lg" placeholder="Patient Name" [(ngModel)]="pres_.patient_name" name="patient_name">
-      <br>
+      <input type="text" 
+      class="form-control form-control-lg"
+      placeholder="Patient Name" 
+      [(ngModel)]="pres_.patient_name" 
+      name="patient_name"
+      formControlName = "patient_name">
+      <span class ="error"*ngIf ="patient_name.invalid && patient_name.touched">Patient Name Required</span>
+      <br></div>
 
       <div class="form-row">
       <div class="col">
 
+        <div class="form-group">
       <h4>Age</h4>
-      <input type="number" class="form-control form-control-lg" placeholder="Age" [(ngModel)]="pres_.patient_age" name="patient_age">
-      <br></div>
+      <input type="number" 
+      class="form-control form-control-lg" 
+      placeholder="Age" 
+      [(ngModel)]="pres_.patient_age" 
+      name="patient_age"
+      formControlName = "patient_age">
+      <span class ="error"*ngIf ="patient_age.invalid && patient_age.touched">Age Required</span>
+      <br></div></div>
       
+      <div class="form-group">
       <div class="col">
       <h4>Doctor Fee | Rs.</h4>
-      <input type="number" class="form-control form-control-lg" placeholder="Doctor Fee (Rs.)" [(ngModel)]="pres_.docFee" name="docFee">
-      <br>
-      </div>
+      <input type="number" 
+      class="form-control form-control-lg" 
+      placeholder="Doctor Fee (Rs.)" 
+      [(ngModel)]="pres_.docFee" 
+      name="docFee"
+      formControlName = "docFee">
+      <span class ="error"*ngIf ="docFee.invalid && docFee.touched">Doctor Fee Required</span>
+     <br>
+     </div></div>
 
     </div>
     <br>   
@@ -51,11 +89,11 @@
 
     <textarea hidden class="form-control" rows="6" disabled  placeholder="Drugs Added " [(ngModel)]="pres_.drugs" name="drugs"></textarea>
     <textarea hidden class="form-control" rows="1" disabled  placeholder="doctor ID " [(ngModel)]="pres_.doctor_id" name="doctor_id"></textarea>
-    <textarea hidden class="form-control" rows="1" disabled  placeholder="status " [(ngModel)]="pres_.status" name="status"></textarea>
+    <textarea hidden class="form-control" rows="1" disabled  placeholder="status" [(ngModel)]="pres_.status" name="status"></textarea>
     <br>
 
     <div class="vertical-center2"> 
-    <button type="submit" class="btn btn-primary btn-lg " (click)= "savePres()">Submit Prescription</button>
+    <button type="submit" class="btn btn-primary btn-lg " >Submit Prescription</button>
     </div>
     <br>
 
