--- a/CareNow/src/app/app.component.css
+++ b/CareNow/src/app/app.component.css
@@ -30,7 +30,14 @@
     height:100%;
     background-image: url("../assets/img/bgdoc2.jpg");
   }
-  
+  .backgroundSM {
+    position:absolute;
+    left:0;
+    top:0;
+    width:100%;
+    height:100%;
+    background-image: url("../assets/img/smBGDS.jpg");
+  }
   .header {
     position:absolute;
     left:0;
