--- a/CareNow/src/app/app.component.css
+++ b/CareNow/src/app/app.component.css
@@ -20,7 +20,7 @@
     top:0;
     width:100%;
     height:100%;
-  background-image: url("../assets/img/bg4.jpg");
+  background-image: url("../assets/img/casbg.jpg");
   }
   .backgroundDel {
     position:absolute;
@@ -28,7 +28,7 @@
     top:0;
     width:100%;
     height:100%;
-  background-image: url("../assets/img/bg4.jpg");
+  background-image: url("../assets/img/delbg.jpg");
   }
   .backgroundDoc {
     position:absolute;
