--- a/CareNow/src/app/components/patient-home/patient-home.component.html
+++ b/CareNow/src/app/components/patient-home/patient-home.component.html
@@ -13,7 +13,7 @@
       <div class="card mb-5 mb-lg-0">
         <div class="card-body">
             <br>
-          <h6 class="card-head text-center">{{MP.presdate}}</h6>
+          <h6 class="card-head text-center">{{MP.prescription_date}}</h6>
           <hr>
           <h5>Prescription ID : {{MP.prescription_id}}</h5>
           <h5>Patient ID : {{MP.patient_id}}</h5> 
