--- a/CareNow/src/app/app.component.css
+++ b/CareNow/src/app/app.component.css
@@ -28,7 +28,7 @@
     top:0;
     width:100%;
     height:100%;
-    background-image: url("../assets/img/bgdoc2.jpg");
+    background-image: url("../assets/img/bg10.jpg");
   }
   
   .header {
