Dinodi Background Commit

--- a/CareNow/src/app/app.component.html
+++ b/CareNow/src/app/app.component.html
@@ -11,7 +11,7 @@
 <div class="backgroundPat" *ngIf="service.isPatient"></div>
 <div *ngIf="service.isPatient" class="mainContent" style="background-color:rgba(111, 106, 121, 0.8); z-index:11;left:7.3%;"></div>
 <!--Stock Manager-->
-<div class="backgroundPha" *ngIf="service.isStockManager"></div>
+<div class="backgroundSM" *ngIf="service.isStockManager"></div>
 <div *ngIf="service.isStockManager" class="mainContent" style="background-color:rgba(0, 0, 0, 0.8); z-index:11;left:7.3%;"></div>
 <!--Cashier-->
 <div class="backgroundCas" *ngIf="service.isCashier"></div>
